tracker-lwc/force-app/main/default/objects/Opportunity/fields/Cancelled_EMA_Bulk_Count__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_EMA_Bulk_Count__c</fullName>
    <description>Count of child Agreements where Type is EMA/Bulk and Status is Cancelled. Used by MDU Cleanup Dashboard tile (Stale EMA/Bulk on wrong stage) instead of cross-filter.</description>
    <label>Cancelled EMA/Bulk Count</label>
    <summaryFilterItems>
        <field>Agreement__c.Is_Cancelled_EMA_Bulk__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Agreement__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>