tracker-lwc/force-app/main/default/objects/Opportunity/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <description>Why an Opp is paused. Required when Stage = On Hold. Helps us decide when conditions have changed enough to revisit.</description>
    <inlineHelpText>Why is this Opp on hold? Pick the reason so we know when to revisit (e.g. Ownership Change resolves, Build Not Approved gets unblocked).</inlineHelpText>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Budget / Timing</fullName>
            </value>
            <value>
                <fullName>Pending Legal Review</fullName>
            </value>
            <value>
                <fullName>Market Conditions</fullName>
            </value>
            <value>
                <fullName>Build Not Approved</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>