tracker-lwc/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Why an Opp was lost. Required when Stage = Closed Lost. Tracks loss patterns so we can improve our pursuit playbook.</description>
    <inlineHelpText>Why did we lose this Opp? Pick the closest reason (use Other + a note if none fit). Helps us learn loss patterns over time.</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Existing Fiber</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>No Contact Info</fullName>
            </value>
            <value>
                <fullName>Existing Contract</fullName>
            </value>
            <value>
                <fullName>Rejected by Owner</fullName>
            </value>
            <value>
                <fullName>Unoccupied/Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>