tracker-lwc/force-app/main/default/objects/Opportunity/fields/MDU_Categorization__c.field-meta.xml
<CustomField>
    <fullName>MDU_Categorization__c</fullName>
    <label>MDU Categorization</label>
    <description>Network categorization for MDU/SFU pursuits (OnNet/OffNet/NearNet). Sourced from Signed MDU Agreement Analysis. Distinct from Property_Category__c (Cat 1/2/3 serviceability).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnNet</fullName>
            </value>
            <value>
                <fullName>OffNet</fullName>
            </value>
            <value>
                <fullName>NearNet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>