tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_Address_Display__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Display__c</fullName>
    <label>Property Address (Display)</label>
    <description>Coalesced address for tracker/reporting: uses the Opportunity's own Property_Address__c (Business ROE / MDU pursuits) and falls back to the Property Unit -&gt; Property Location base address (Business Sales tenant Opps).</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Property_Address__c), Property_Unit__r.Property_Location__r.Business_Base_Address__c, Property_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>