tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_City_Display__c.field-meta.xml
<CustomField>
    <fullName>Property_City_Display__c</fullName>
    <label>Property City (Display)</label>
    <description>Coalesced city for tracker/reporting: uses the Opportunity's own Property_City__c (Business ROE / MDU pursuits) and falls back to the Property Unit -&gt; Property Location city (Business Sales tenant Opps).</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Property_City__c), Property_Unit__r.Property_Location__r.City__c, Property_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>