tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_County__c.field-meta.xml
<CustomField>
    <fullName>Property_County__c</fullName>
    <label>Property County</label>
    <description>County the property sits in. Requested by Niraj 2026-07-29 for the PAL/ROE acquisition refocus: the TX territory split is by county (Brett takes Bell County, Melissa takes the rest of Texas), so county needs to be filterable in Salesforce.</description>
    <inlineHelpText>County name without the word "County" (e.g. Bell, Tarrant, Douglas).</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>