tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_State_Display__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Display__c</fullName>
    <label>Property State (Display)</label>
    <description>Coalesced state for tracker/reporting: uses the Opportunity's own Property_State__c (Business ROE / MDU pursuits) and falls back to the Property Unit -&gt; Property Location state (Business Sales tenant Opps).</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Property_State__c), TEXT(Property_Unit__r.Property_Location__r.State__c), Property_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>