tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <label>Property Street</label>
    <description>Street name component of the property address, split out from Property_Address__c (street number lives in Property_Street_Number__c). Requested by Niraj 2026-07-29 for the PAL/ROE acquisition refocus.</description>
    <inlineHelpText>Street name without the number (e.g. W Dodge Rd).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>