tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Number__c</fullName>
    <label>Property St Number</label>
    <description>Street number component of the property address, split out from Property_Address__c. Requested by Niraj 2026-07-29 for the PAL/ROE acquisition refocus so the on-net MDU list can be sorted and grouped by street.</description>
    <inlineHelpText>Just the street number (e.g. 1015). The rest of the address is in Property Street.</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>