tracker-lwc/force-app/main/default/objects/Opportunity/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>Townhomes</fullName>
            </value>
            <value>
                <fullName>Private SFU Neighborhood</fullName>
            </value>
            <value>
                <fullName>Single Family Homes</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Manufactured Homes / Mobile Homes</fullName>
            </value>
            <value>
                <fullName>Senior Living / Assisted Living</fullName>
            </value>
            <value>
                <fullName>Commercial / Business</fullName>
            </value>
            <value>
                <fullName>Business Park</fullName>
            </value>
            <value>
                <fullName>Strip Mall</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>