tracker-lwc/force-app/main/default/objects/Opportunity/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <description>Where we are in early-pipeline outreach. Use during Prospects, Prospecting, and Engaged stages. Dependent on StageName as of 2026-05-18 — values cannot be set when Stage is outside those three.</description>
    <inlineHelpText>What's the current sales activity on this Opp? Update as outreach progresses (e.g. Reached Out -> Research Completed). Only available during Prospects, Prospecting, and Engaged stages.</inlineHelpText>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contact Pending</fullName>
            </value>
            <value>
                <fullName>Reached Out - Pending Response</fullName>
            </value>
            <value>
                <fullName>Research Completed</fullName>
            </value>
            <value>
                <fullName>FF Sales - Tenant Interest Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>