tracker-lwc/force-app/main/default/objects/Opportunity/fields/Sub_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Sub_Bucket__c</fullName>
    <description>Unified sub-bucket view across all stages. Auto-pulls from Sales Status, Pursuit Status, Hold Reason, or Loss Reason depending on Stage. Use this in reports and dashboards as a single column for cross-stage analysis.</description>
    <inlineHelpText>The sub-bucket within the current Stage. Read-only; auto-populates from the relevant reason field (Sales Status / Pursuit Status / Hold Reason / Loss Reason) based on Stage.</inlineHelpText>
    <formula>CASE(TEXT(StageName),
  "On Hold",                  TEXT(Hold_Reason__c),
  "Closed Lost",              TEXT(Loss_Reason__c),
  "PAL/ROE Complete",         TEXT(Substatus__c),
  "Marketing/Bulk Complete",  TEXT(Substatus__c),
  "Prospects",                TEXT(Sales_Status__c),
  "Prospecting",              TEXT(Sales_Status__c),
  "Engaged",                  TEXT(Sales_Status__c),
  ""
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Stage Status</label>
    <type>Text</type>
</CustomField>