tracker-lwc/force-app/main/default/objects/Opportunity/fields/Substatus__c.field-meta.xml
<CustomField>
    <fullName>Substatus__c</fullName>
    <description>Why a post-PAL Opp is stalled. Use when Stage is PAL/ROE Complete or Marketing/Bulk Complete to track the blocker. Dependent on StageName.</description>
    <inlineHelpText>Why is this post-PAL pursuit stalled? Pick the blocker so we can prioritize follow-up. Only available on PAL/ROE Complete and Marketing/Bulk Complete stages.</inlineHelpText>
    <label>Pursuit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Unresponsive</fullName>
            </value>
            <value>
                <fullName>Budget Not Approved / Business Case</fullName>
            </value>
            <value>
                <fullName>Chose Another Provider</fullName>
            </value>
            <value>
                <fullName>Bulk/Marketing Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>