tracker-lwc/force-app/main/default/objects/Opportunity/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <businessProcess>Business Sales Process</businessProcess>
    <description>B2B tenant revenue sales at the Property Unit (suite) level. Create from a Property Unit page.</description>
    <label>Business Sales</label>
</RecordType>