tracker-lwc/force-app/main/default/objects/Opportunity/recordTypes/MDU.recordType-meta.xml
<RecordType>
    <fullName>MDU</fullName>
    <active>true</active>
    <businessProcess>MDU Sales Process</businessProcess>
    <description>Residential property pursuits (apartments, condos, townhomes, single family, etc) at the Property Location level. Use Business ROE for commercial buildings.</description>
    <label>MDU/SFU</label>
</RecordType>