tracker-lwc/force-app/main/default/objects/Opportunity/validationRules/MDU_No_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>MDU_No_Closed_Won</fullName>
    <active>true</active>
    <description>MDU and Business ROE opportunities cannot be set to Closed Won. Building-pursuit pipelines end at Under Contract.</description>
    <errorConditionFormula>AND(
    OR(RecordType.DeveloperName = &quot;MDU&quot;, RecordType.DeveloperName = &quot;Business_ROE&quot;),
    ISPICKVAL(StageName, &quot;Closed Won&quot;)
)</errorConditionFormula>
    <errorMessage>MDU and Business ROE opportunities end at Under Contract. Closed Won is only available for Business Sales (tenant revenue) opportunities.</errorMessage>
</ValidationRule>